# interpreter

./: .gitignor  .gitignore  BNF.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.py  test.txt
Interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.h
Interpreter/Lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp
Interpreter/Lexer/include/: Lexer.h  Token.h  TokenType.h  TokenTypes.h
Interpreter/Parser/: BinaryExpression.cpp  CMakeLists.txt  NumberExpression.cpp  Parser.cpp
Interpreter/Parser/include/: BinaryExpression.h  Expression.h  NumberExpression.h  Parser.h
Lexer/: BNF.md  CMakeLists.txt  Lexer.cpp  Test.cpp
Lexer/include/: Lexer.h  TokenTypes.h
Tests/: CMakeLists.txt  source.txt  test-Lexer.cpp
Tests/test-codes/: if-block.jt  strings.jt
Tests/test-lexer/: CMakeLists.txt  main.cpp  main.h  test-if-block.cpp  test-strings.cpp
Tests/test-parser/: main.cpp  main.h  test-expression.cpp  test-parser.cpp
